--- a/drumbeat/style.css
+++ b/drumbeat/style.css
@@ -21,7 +21,7 @@ body,html {
 }
 
 .key {
-  border: .4rem solid #ffc600;
+  border: .4rem solid #fff;
   border-radius: .5rem;
   margin: 1rem;
   font-size: 1.5rem;
