--- a/stickyNav/style.css
+++ b/stickyNav/style.css
@@ -25,6 +25,10 @@ body {
   transition: transform 0.5s;
 }
 
+.site-wrap {
+  transform: scale(1);
+}
+
 header {
   text-align: center;
   height: 50vh;
@@ -39,6 +43,11 @@ h1 {
   color: white;
   font-size: 7vw;
   text-shadow: 3px 4px 0 rgba(0,0,0,0.2);
+}
+
+ .fixed-nav nav{
+  position: fixed;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.05);
 }
 
 nav {
@@ -76,6 +85,10 @@ li.logo {
 
 li.logo a {
   color: black;
+}
+
+.fixed-nav li.logo {
+  max-width: 500px;
 }
 
 nav a {
